--- a/cse167_pro1/cse167_pro1.vcxproj
+++ b/cse167_pro1/cse167_pro1.vcxproj
@@ -82,7 +82,7 @@
     <ClCompile Include="cube.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix4d.cpp" />
-    <ClCompile Include="Vector3.cpp" />
+    <ClCompile Include="Vector3d.cpp" />
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
