--- a/cse167_pro1/cse167_pro1.vcxproj
+++ b/cse167_pro1/cse167_pro1.vcxproj
@@ -79,6 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bouncingBall.cpp" />
     <ClCompile Include="cube.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix4d.cpp" />
@@ -87,6 +88,7 @@
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bouncingBall.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Matrix4d.h" />
