--- a/cse167_pro1/cse167_pro1.vcxproj.filters
+++ b/cse167_pro1/cse167_pro1.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cube.h">
@@ -67,6 +70,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parser.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
